k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthchecks-deployment
  labels:
    app: healthchecks
spec:
  selector:
    matchLabels:
      app: healthchecks
  template:
    metadata:
      labels:
        app: healthchecks
    spec:
      containers:
      - name: healthchecks
        image: healthchecks/healthchecks:v2.7
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: 256Mi
            cpu: 50m
        imagePullPolicy: Always
      tolerations:
      - key: arm64
        operator: Exists
        effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - arm64
