k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthchecks-service
  labels:
    app: healthchecks
spec:
  selector:
    app: healthchecks
  type: ClusterIP
  ports:
    - name: healthchecks
      protocol: TCP
      port: 8000
      targetPort: 8000
