k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthchecks-ingress
  labels:
    app: healthchecks
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: ingress-group
    alb.ingress.kubernetes.io/group.order: '110'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:970722082474:certificate/b8c690cb-9efe-4966-a2a7-2be47d086e41
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/success-codes: 200,400
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: hc-dev.fastjobs.sg
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
      - path: /
        pathType: Prefix
        backend:
          service:
            name: healthchecks-service
            port:
              number: 8000
